--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h3>Hi, I am Engineer Njuguna,</h3>
                     <h1>WEB DEVELOPER</h1>
                     <h5>I am a web wizard from Kenya.
-                        I develop and design websites for personal and business purposes.
+                        I develop and design websites for both personal and business purposes.
                     </h5>
                 </div>
     
