--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <section>
                 <nav>
                     <ul>
-                        <li><a href="#">About Me</a></li>
+                        <li><a href="about.html">About Me</a></li>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Skills</a></li>
-                        <li><a href="#">Education</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="skills.html">Skills</a></li>
+                        <li><a href="education.html">Education</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </section>
@@ -34,6 +34,10 @@
                 </div>
             </section>
         </section>
+        <footer>
+            <p>&copy;2025 NJUGUNA NJOROGE</p>
+            <p>All rights reserved.</p>
+        </footer>
     </main>
 </body>
 </html>
